[gd_scene load_steps=2 format=3 uid="uid://dxk7n5m8wp3qb"]

[ext_resource type="Script" path="res://scripts/combat_system.gd" id="1_combat"]

[node name="CombatSystem" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_combat")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.25, 0.2, 0.3, 1)

[node name="CombatUI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerPanel" type="Panel" parent="CombatUI"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -100.0
offset_right = -50.0
offset_bottom = 100.0
grow_horizontal = 0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CombatUI/PlayerPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="NameLabel" type="Label" parent="CombatUI/PlayerPanel/VBoxContainer"]
layout_mode = 2
text = "Lam-Ang"
horizontal_alignment = 1

[node name="HealthBar" type="ProgressBar" parent="CombatUI/PlayerPanel/VBoxContainer"]
layout_mode = 2
value = 100.0
show_percentage = false

[node name="HealthLabel" type="Label" parent="CombatUI/PlayerPanel/VBoxContainer"]
layout_mode = 2
text = "HP: 100/100"
horizontal_alignment = 1

[node name="EnemyPanel" type="Panel" parent="CombatUI"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 50.0
offset_top = -100.0
offset_right = 250.0
offset_bottom = 100.0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CombatUI/EnemyPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="NameLabel" type="Label" parent="CombatUI/EnemyPanel/VBoxContainer"]
layout_mode = 2
text = "Enemy"
horizontal_alignment = 1

[node name="HealthBar" type="ProgressBar" parent="CombatUI/EnemyPanel/VBoxContainer"]
layout_mode = 2
value = 100.0
show_percentage = false

[node name="HealthLabel" type="Label" parent="CombatUI/EnemyPanel/VBoxContainer"]
layout_mode = 2
text = "HP: 50/50"
horizontal_alignment = 1

[node name="ActionButtons" type="HBoxContainer" parent="CombatUI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -100.0
offset_right = 300.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 10

[node name="AttackButton" type="Button" parent="CombatUI/ActionButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Attack"

[node name="DefendButton" type="Button" parent="CombatUI/ActionButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Defend"

[node name="SpecialButton" type="Button" parent="CombatUI/ActionButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Special"

[node name="FleeButton" type="Button" parent="CombatUI/ActionButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Flee"

[node name="CombatLog" type="RichTextLabel" parent="CombatUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -250.0
offset_right = 250.0
offset_bottom = -120.0
grow_horizontal = 2
grow_vertical = 2
text = "Combat Log:
"
